<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".AuthActivity">

        <TextView
            android:id="@+id/tv_hello2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/let_s_get_acquainted"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_hello3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_out_the_profile_and"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/tv_hello2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="#BDBDBD"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_email_edit"
            app:layout_constraintTop_toBottomOf="@id/tv_hello3"
            android:layout_marginTop="55dp"
            />

        <EditText
            android:id="@+id/tv_email_edit"
            android:layout_width="@dimen/tv_width"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textEmailAddress"
            android:hint="@string/type_e_mail_here"
            android:textColorHint="#BDBDBD"
            android:autofillHints="e-mail" />


        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#BDBDBD"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_password_edit"
            app:layout_constraintTop_toBottomOf="@id/tv_email_edit"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/tv_password_edit"
            android:layout_width="@dimen/tv_width"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textPassword"
            android:hint="@string/type_password_here"
            android:textColorHint="#BDBDBD"
            android:autofillHints="password" />


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="126dp"
            android:layout_height="18dp"
            android:text="@string/remember_me"
            android:textColor="#B2B2B3"
            app:layout_constraintTop_toBottomOf="@id/tv_password_edit"
            app:layout_constraintLeft_toLeftOf="@id/tv_password_edit"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            app:strokeColor="#FB5E06"
            app:strokeWidth="2dp"
            android:textSize="16sp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    <TextView
        android:id="@+id/tv_you_agree"
        android:layout_width="@dimen/tv_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/by_clicking_register_you"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1" />


        <TextView
            android:id="@+id/tv_link_login_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#B2B2B3"
            app:layout_constraintTop_toBottomOf="@id/tv_you_agree"
            app:layout_constraintLeft_toLeftOf="@id/tv_you_agree"
            android:layout_marginTop="10dp"
            android:layout_marginStart="49dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:layout_constraintTop_toTopOf="@id/tv_link_login_invite"
            app:layout_constraintRight_toRightOf="@id/button1"
            android:layout_marginEnd="49dp"
            android:textSize="14sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>