<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_hello0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/hello"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_hello1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_and"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_hello0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="#BDBDBD"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_email_edit"
        app:layout_constraintTop_toBottomOf="@id/tv_hello1"
        android:layout_marginTop="55dp"
        />

    <EditText
        android:id="@+id/tv_email_edit"
        android:layout_width="@dimen/tv_width"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress"
        android:hint="@string/type_e_mail_here"
        android:textColorHint="#BDBDBD"
        android:autofillHints="e-mail" />

    <TextView
        android:id="@+id/tv_email_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_email_edit"
        app:layout_constraintTop_toBottomOf="@id/tv_email_edit"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#BDBDBD"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_password_edit"
        app:layout_constraintTop_toBottomOf="@id/tv_email_verify"
        />

    <EditText
        android:id="@+id/tv_password_edit"
        android:layout_width="@dimen/tv_width"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        android:hint="@string/type_password_here"
        android:textColorHint="#BDBDBD"
        android:autofillHints="password" />

    <TextView
        android:id="@+id/tv_password_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FF0000"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_password_edit"
        app:layout_constraintTop_toBottomOf="@id/tv_password_edit"

        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="126dp"
        android:layout_height="18dp"
        android:text="@string/remember_me"
        android:textColor="#B2B2B3"
        app:layout_constraintTop_toBottomOf="@id/tv_password_verify"
        app:layout_constraintLeft_toLeftOf="@id/tv_password_edit"
        android:layout_marginTop="10dp"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/tv_link_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        app:layout_constraintTop_toTopOf="@id/checkBox"
        app:layout_constraintRight_toRightOf="@id/tv_password_edit"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:strokeColor="#FB5E06"
        app:strokeWidth="2dp"
        android:textSize="16sp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/tv_link_sign_up_invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:textColor="#B2B2B3"
        app:layout_constraintTop_toBottomOf="@id/button0"
        app:layout_constraintLeft_toLeftOf="@id/button0"
        android:layout_marginTop="10dp"
        android:layout_marginStart="65dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_link_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintTop_toTopOf="@id/tv_link_sign_up_invite"
        app:layout_constraintRight_toRightOf="@id/button0"
        android:layout_marginEnd="65dp"
        android:textSize="14sp" />

</androidx.constraintlayout.widget.ConstraintLayout>