<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LoggedActivity">

    <View
        android:id="@+id/tv_container0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/tv_container1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5"/>

    <View
        android:id="@+id/tv_container1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_container0"
        app:layout_constraintVertical_weight="0.5" />

    <TextView
        android:id="@+id/tv_log0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_log0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/vladround"
        android:contentDescription="@string/user_photo" />

    <TextView
        android:id="@+id/tv_log1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/editText"
        app:layout_constraintBottom_toBottomOf="@id/tv_container0"
        android:layout_marginBottom="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_log2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_trainee"
        android:textColor="@color/lightGray"
        android:textSize="@dimen/mediumText"
        app:layout_constraintTop_toBottomOf="@id/tv_log1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_log3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5295_gladiator_walks_apk_110"
        android:textColor="@color/lightGray"
        android:textSize="@dimen/mediumText"
        app:layout_constraintTop_toBottomOf="@id/tv_log2"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textColor="@color/red"
        app:cornerRadius="30dp"
        app:strokeColor="@color/red"
        app:strokeWidth="3dp"
        android:textSize="30dp"
        android:text="@string/f"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/tv_container1"
        app:layout_constraintStart_toStartOf="@id/button5"
        android:layout_marginBottom="180dp"
        android:layout_marginStart="40dp"
        android:padding="0dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        tools:ignore="SpUsage" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textColor="@color/red"
        app:cornerRadius="30dp"
        app:strokeColor="@color/red"
        app:strokeWidth="3dp"
        android:textSize="30dp"
        android:text="@string/in"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/tv_container1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="180dp"
        android:padding="0dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        tools:ignore="SpUsage" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="180dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:textAllCaps="false"
        android:textColor="@color/red"
        app:cornerRadius="30dp"
        app:icon="@drawable/vk700"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="33dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_container1"
        app:layout_constraintEnd_toEndOf="@id/button5"
        app:strokeColor="@color/red"
        app:strokeWidth="3dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="328dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:textSize="@dimen/buttonText"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="328dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp"
        android:textSize="@dimen/buttonText"
        android:text="@string/view_my_contacts"
        app:layout_constraintBottom_toBottomOf="@id/tv_container1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>